--- a/service/pom.xml
+++ b/service/pom.xml
@@ -82,8 +82,14 @@
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
-      <artifactId>celeborn-openapi-model_${scala.binary.version}</artifactId>
+      <artifactId>celeborn-openapi-client_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
