--- a/common/pom.xml
+++ b/common/pom.xml
@@ -32,7 +32,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
-      <artifactId>celeborn-spi_${scala.binary.version}</artifactId>
+      <artifactId>celeborn-spi</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
