maven & sbt align

--- a/openapi/openapi-client/pom.xml
+++ b/openapi/openapi-client/pom.xml
@@ -218,7 +218,7 @@
 
   <profiles>
     <profile>
-      <id>openapi-generate</id>
+      <id>generate</id>
       <build>
         <plugins>
           <plugin>
