--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -27,15 +27,17 @@ fullnameOverride: ""
 
 # Specifies the Celeborn image to use
 image:
+  # -- Image registry
+  registry: docker.io
   # -- Image repository
-  repository: aliyunemr/remote-shuffle-service
-  # -- Image tag
-  tag: 0.1.1-6badd20
+  repository: apache/celeborn
+  # -- Image tag, default is chart `appVersion`
+  tag: ""
   # -- Image pull policy
-  pullPolicy: Always
-
-# -- Image pull secrets for private image registry
-imagePullSecrets: []
+  pullPolicy: IfNotPresent
+  # -- Image pull secrets for private image registry
+  pullSecrets: []
+  # - name: secret-name
 
 # -- Specifies the number of Celeborn master replicas to deploy, master replicas should not less than 3
 masterReplicas: 3
