tez ordered tmp impl

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <spark.version>3.3.4</spark.version>
 
     <!-- use hadoop-3 as default  -->
-    <hadoop.version>3.3.6</hadoop.version>
+    <hadoop.version>3.3.1</hadoop.version>
     <!--
     If you change codahale.metrics.version, you also need to change
     the link to metrics.dropwizard.io in docs/monitoring.md.
@@ -1749,7 +1749,7 @@
       <modules>
         <module>client-tez/tez</module>
         <module>client-tez/tez-shaded</module>
-        <module>tests/mr-it</module>
+        <module>tests/tez-it</module>
       </modules>
       <properties>
         <tez.version>0.10.2</tez.version>
