[CELEBORN-1240][FOLLOWUP] Introduce web profile for web module
### What changes were proposed in this pull request?

Introduce web profile for web module.

### Why are the changes needed?

The compilation speed of web module is sometimes very slow due to the influence of the network, which hinders the development process.

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

CI.

Closes #2679 from SteNicholas/CELEBORN-1240.

Authored-by: SteNicholas <programgeek@163.com>
Signed-off-by: mingji <fengmingxiao.fmx@alibaba-inc.com>

(cherry picked from commit c0dda4a15aa988ba1dca9437573bb8aed8c1554c)

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
     <module>service</module>
     <module>master</module>
     <module>worker</module>
-    <module>web</module>
   </modules>
 
   <distributionManagement>
@@ -1631,6 +1630,13 @@
         <module>client-mr/mr</module>
         <module>client-mr/mr-shaded</module>
         <module>tests/mr-it</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <id>web</id>
+      <modules>
+        <module>web</module>
       </modules>
     </profile>
 
